styles/_forecast.scss
@use "./globals" as *;

.weather-data.expand-forecast {
  display: none;

  @include breakpoint(tablet, max) {
    cursor: pointer;
    width: calc(80% + 40px);
    margin: 0;
    margin-bottom: 8px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 6px;
    padding: 8px;
    color: $text;
    gap: 5px;
    font-size: 2rem;
    height: fit-content;
    border: none;
    box-shadow: none;
    backdrop-filter: blur(16px);

    img {
      filter: invert(32%) sepia(8%) saturate(3697%) hue-rotate(300deg)
        brightness(106%) contrast(92%);
    }
  }
}

.weather-data.forecast {
  display: flex;
  flex: 1;
  width: 80%;
  gap: 20px;
  flex-direction: column;
  justify-items: center;
  align-items: center;
  margin-top: 0;

  &.hidden {
    display: none;
  }

  .forecast-day {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    width: 100%;
    flex: 1;
    font-weight: 800;
    border: solid 4px $primary;
    border-radius: 18px;
    padding: 8px;
    @include breakpoint(tablet, max) {
      height: fit-content;
      flex-direction: row;

      img {
        height: 48px;
        width: 48px;
      }
    }

    p {
      font-size: 2rem;
      margin-bottom: 0;
      margin-top: 10px;
      @include breakpoint(tablet, max) {
        @include breakpoint(phone, max) {
          font-size: 2.5rem;
        }
        font-size: 3rem;
      }
    }

    .temp-container {
      display: flex;
      flex-direction: column;
      width: fit-content;
      align-items: center;
      gap: 8px;

      p {
        font-size: 2rem;
        margin-bottom: 0px;
        margin-top: 0;
        font-weight: 800;
        color: $text;
        text-shadow: 2px 2px $accent;

        &:last-child {
          text-shadow: none;
          color: rgba($accent, 0.9);
          align-self: flex-end;
          font-size: 1.2rem;
          font-style: italic;
          font-weight: 300;
        }
      }
    }
  }
}

